--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.active {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.active-icon {
+  color: #b57295 !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sideBar-items {
+  color: grey;
+  font-size: large;
+}
+
+.sideBar-items p {
+  margin-left: 1em;
+}
+
+.sideBar-items:hover p {
+  color: white;
+}
+
+.sideBar-items:hover svg {
+  color: #b57295;
+}
+
+.sideBar-items:not(:last-child) {
+  margin-bottom: 1.5em;
 }
